# Yeenboy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
include/yeenboy/: yeenboy.hpp
include/yeenboy/common/: defs.hpp  logger.hpp  types.hpp  utils.hpp
include/yeenboy/core/: cartridge.hpp  cpu.hpp  io_controller.hpp  memory_bus.hpp  mmu_module.hpp  register.hpp  system.hpp  vram.hpp  wram.hpp
include/yeenboy/core/cartridge/: cartridge.hpp
include/yeenboy/core/cartridge/mbc/: mbc.hpp  mbc1.hpp
include/yeenboy/core/cpu/: cpu.hpp
include/yeenboy/core/memory/: memory.hpp  vram.hpp  wram.hpp
src/: CMakeLists.txt
src/yeenboy/: yeenboy.cpp
src/yeenboy/core/: cartridge.cpp  cpu.cpp  io_controller.cpp  memory_bus.cpp  register.cpp  system.cpp
src/yeenboy/core/cartridge/: cartridge.cpp
src/yeenboy/core/cartridge/mbc/: mbc1.cpp
src/yeenboy/core/cpu/: cb_opcode_mappings.cpp  cpu.cpp  opcode_helpers.cpp  opcode_mappings.cpp
src/yeenboy/core/cpu/opcodes/: cb_opcode_mappings.cpp  opcode_helpers_alu.cpp  opcode_helpers_bit_manipulation.cpp  opcode_helpers_branching.cpp  opcode_helpers_loads.cpp  opcode_helpers_misc.cpp  opcode_mappings.cpp
src/yeenboy/core/memory/: vram.cpp  wram.cpp
tests/: CMakeLists.txt  memory.cpp  registers.cpp  utils.cpp
